<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosplash"
    tools:context=".Splash">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="515dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgSplashDes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/pizarron"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mf"
        android:text="@string/titulo"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="@dimen/textView_XL"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="347dp"
        android:layout_height="33dp"
        android:fontFamily="@font/mf"
        android:text="@string/creador"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textView_S"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mf"
        android:text="@string/version"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="@dimen/textView_S"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="107dp"
        android:layout_height="81dp"
        android:contentDescription="@string/imgSplashDes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        app:srcCompat="@drawable/logo" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="313dp"
        android:layout_height="169dp"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998">

    </pl.droidsonroids.gif.GifImageView>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="386dp"
        android:layout_height="275dp"
        android:src="@drawable/confeti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck">

    </pl.droidsonroids.gif.GifImageView>


</androidx.constraintlayout.widget.ConstraintLayout>