<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tvPar4"
        android:layout_width="247dp"
        android:layout_height="31dp"
        android:fontFamily="@font/mf"
        android:text="@string/textPrueba"
        android:textAlignment="center"
        android:textColor="@color/teal_700"

        android:textSize="@dimen/textView_S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="191dp"
        android:layout_height="73dp"
        android:src="@drawable/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        tools:ignore="ImageContrastCheck">

    </pl.droidsonroids.gif.GifImageView>

    <ImageView
        android:id="@+id/ivFormula2"
        android:layout_width="242dp"
        android:layout_height="230dp"
        android:contentDescription="@string/imgformulaDes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/postick"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvString1"
        android:layout_width="386dp"
        android:layout_height="62dp"
        android:fontFamily="@font/mf"
        android:text="@string/stringMA2"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="@dimen/textView_L"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvPar1"
        android:layout_width="267dp"
        android:layout_height="37dp"
        android:fontFamily="@font/mf"
        android:text="@string/textPrueba"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/textView_M"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/tvString2"
        android:layout_width="267dp"
        android:layout_height="37dp"
        android:fontFamily="@font/mf"
        android:text="@string/stringMA2_1"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="@dimen/textView_M"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvString3"
        android:layout_width="267dp"
        android:layout_height="37dp"
        android:fontFamily="@font/mf"
        android:text="@string/stringMA2_2"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="@dimen/textView_M"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPar2"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:fontFamily="@font/mf"
        android:text="@string/textPrueba"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/textView_S"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/tvPar3"
        android:layout_width="252dp"
        android:layout_height="32dp"
        android:fontFamily="@font/mf"
        android:text="@string/textPrueba"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/textView_S"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/tvPar5"
        android:layout_width="246dp"
        android:layout_height="36dp"
        android:fontFamily="@font/mf"
        android:text="@string/textPrueba"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="@dimen/textView_M"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>