<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spnFormules"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:contentDescription="@string/app_name"

        android:dropDownWidth="wrap_content"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="386dp"
        android:layout_height="62dp"
        android:fontFamily="@font/mf"
        android:text="@string/selec_form"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="@dimen/textView_L"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="74dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:fontFamily="@font/mf"
        android:onClick="click"
        android:text="@string/btn_calcular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ivFormula"
        android:layout_width="219dp"
        android:layout_height="164dp"
        android:contentDescription="@string/imgformulaDes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@color/black"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/etVar3"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/marker"
        android:hint="@string/HintProv"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:shadowColor="@color/black"
        android:textColor="@color/ic_launcher_background"
        android:textColorHighlight="@color/ic_launcher_background"
        android:textColorHint="@color/ic_launcher_background"
        android:textColorLink="@color/ic_launcher_background"
        android:textSize="@dimen/textView_S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVar2"
        app:layout_constraintVertical_bias="0.100000024"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etVar2"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/marker"
        android:hint="@string/HintProv"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:textColor="@color/ic_launcher_background"
        android:textColorHighlight="@color/ic_launcher_background"
        android:textColorHint="@color/ic_launcher_background"
        android:textSize="@dimen/textView_S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVar1"
        app:layout_constraintVertical_bias="0.100000024"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etVar1"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/marker"
        android:hint="@string/HintProv"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:textColor="@color/ic_launcher_background"
        android:textColorHighlight="@color/ic_launcher_background"
        android:textColorHint="@color/ic_launcher_background"
        android:textColorLink="@color/ic_launcher_background"
        android:textSize="@dimen/textView_S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvVar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marker"
        android:text="@string/HintProv"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:textColorLink="@color/teal_700"
        android:textSize="@dimen/textView_M"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <TextView
        android:id="@+id/tvVar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marker"
        android:text="@string/HintProv"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:textColorLink="@color/teal_700"
        android:textSize="@dimen/textView_M"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/tvVar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marker"
        android:text="@string/HintProv"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:textColorLink="@color/teal_700"
        android:textSize="@dimen/textView_M"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

</androidx.constraintlayout.widget.ConstraintLayout>